--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             Hello world!
         </h1>
         <p>
-            abcdefg
+            academic website (todo)
         </p>
     </body>
 </html>
