website skeleton + favicon

--- a/index.html
+++ b/index.html
@@ -7,16 +7,59 @@
     
         <meta name="author" content="An Dohyun">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon"> -->
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         
       </head>
     <body>
-        <h1>
-            Hello world!
-        </h1>
-        <p>
-            academic website (todo)
-        </p>
+        <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr style="padding:0px">
+              <td style="padding:0px">
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                  <tr style="padding:0px">
+                    <td style="padding:2.5%;width:63%;vertical-align:middle">
+                      <p class="name" style="text-align: center;">
+                        An Dohyun
+                      </p>
+                      <p>education (TODO)
+                      </p>
+                      <p>
+                        research interest & skills (TODO)
+                      </p>
+                      <p style="text-align:center">
+                        <a href="mailto:raphael6931@gmail.com">Email</a> &nbsp;/&nbsp;
+                        <a href="data/AnDohyun-CV.pdf">CV</a>
+                      </p>
+                    </td>
+                    <td style="padding:2.5%;width:40%;max-width:40%">
+                        <!-- photo (todo) -->
+                      <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/JonBarron.jpg" class="hoverZoomLink"></a>
+                    </td>
+                  </tr>
+                </tbody></table>
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
+                    <tr>
+                    <td style="padding:20px;width:100%;vertical-align:middle">
+                      <h2>Experience</h2>
+                      <p>
+                        (TODO)
+                      </p>
+                    </td>
+                  </tr>
+                </tbody></table>
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                    <tr>
+                    <td style="padding:20px;width:100%;vertical-align:middle">
+                      <h2>Awards</h2>
+                      <p>
+                        (TODO)
+                      </p>
+                    </td>
+                  </tr>
+                </tbody></table>
+            </td>
+        </tr>
+        </tbody>
+        </table>
     </body>
 </html>
