--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                       </p>
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
-                      <a href="images/profile.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/JonBarron.jpg" class="hoverZoomLink"></a>
+                        <!-- photo (todo) -->
+                      <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/JonBarron.jpg" class="hoverZoomLink"></a>
                     </td>
                   </tr>
                 </tbody></table>
