--- a/index.html
+++ b/index.html
@@ -40,9 +40,18 @@
                     <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
                       <h2>Experience</h2>
-                      <p>
-                        (TODO)
-                      </p>
+                      <table width="100%" align="center" border="0" cellpadding="20">
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ldctiqac.png"></td>
+                                <td>
+                                    <strong>AI Research Internship</strong>, Yonsei University (Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a>)
+                                    <p>
+                                        description (TODO)
+                                    </p>
+                                </td>
+                            </tr>
+                        </tbody></table>
                     </td>
                   </tr>
                 </tbody></table>
@@ -50,9 +59,18 @@
                     <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
                       <h2>Awards</h2>
-                      <p>
-                        (TODO)
-                      </p>
+                        [Aug 2023] <b>High Honors</b> (Yonsei University)
+                        <ul>
+                            <li>GPA: 4.25/4.3 (Top 4 in College of Computing)</li>
+                        </ul>
+                        [Feb 2024] <b>The Highest Honors</b> (Yonsei University)
+                        <ul>
+                            <li>GPA: 4.25/4.3 (Top 1 in College of Computing)</li>
+                        </ul>
+                        [Aug 2024] <b>The Highest Honors</b> (Yonsei University)
+                        <ul>
+                            <li>GPA: 4.25/4.3 (Top 1 in Dept. of Artificial Intelligence)</li>
+                        </ul>
                     </td>
                   </tr>
                 </tbody></table>
