--- a/index.html
+++ b/index.html
@@ -36,14 +36,25 @@
                     </td>
                   </tr>
                 </tbody></table>
-                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                     <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
                       <h2>Experience</h2>
-                      <table width="100%" align="center" border="0" cellpadding="20">
+                      <table width="100%" cellpadding="20">
                         <tbody>
                             <tr>
-                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ldctiqac.png"></td>
+                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/TODO.png" width="100px"></td>
+                                <td>
+                                    <strong>Samsung Electronics DX Algorithm Bootcamp</strong>
+                                    <p>
+                                        description (TODO)
+                                    </p>
+                                </td>
+                            </tr>
+                        </tbody>
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ldctiqac.png" width="100px"></td>
                                 <td>
                                     <strong>AI Research Internship</strong>, Yonsei University (Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a>)
                                     <p>
@@ -51,7 +62,8 @@
                                     </p>
                                 </td>
                             </tr>
-                        </tbody></table>
+                        </tbody>
+                      </table>
                     </td>
                   </tr>
                 </tbody></table>
@@ -59,6 +71,7 @@
                     <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
                       <h2>Awards</h2>
+                        <br>
                         [Aug 2023] <b>High Honors</b> (Yonsei University)
                         <ul>
                             <li>GPA: 4.25/4.3 (Top 4 in College of Computing)</li>
