--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                       <p class="name" style="text-align: center;">
                         An Dohyun
                       </p>
-                      <p>education (TODO)
+                      <p>
+                        education (TODO)
                       </p>
                       <p>
                         research interest & skills (TODO)
@@ -43,11 +44,11 @@
                       <table width="100%" cellpadding="20">
                         <tbody>
                             <tr>
-                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/TODO.png" width="100px"></td>
+                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/samsung.png" width="100px"></td>
                                 <td>
-                                    <strong>Samsung Electronics DX Algorithm Bootcamp</strong>
+                                    <strong>Samsung Electronics DX Algorithm Bootcamp</strong>, 2023 summer
                                     <p>
-                                        description (TODO)
+                                        Studied intermediate-advanced data structures and algorithms, such as dynamic programming and segment tree.
                                     </p>
                                 </td>
                             </tr>
@@ -58,7 +59,7 @@
                                 <td>
                                     <strong>AI Research Internship</strong>, Yonsei University (Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a>)
                                     <p>
-                                        description (TODO)
+                                        todo
                                     </p>
                                 </td>
                             </tr>
