rest of the contents

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                         An Dohyun
                       </p>
                       <p>
-                        education (TODO)
+                        I'm an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a>. I'm majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>.
                       </p>
                       <p>
-                        research interest & skills (TODO)
+                        My favorite research topic is computer vision, while I'm also interested in LLM and other deep learning models. I'm moderately experienced in Python, especially in Pytorch.
                       </p>
                       <p style="text-align:center">
                         <a href="mailto:raphael6931@gmail.com">Email</a> &nbsp;/&nbsp;
@@ -48,7 +48,7 @@
                                 <td>
                                     <strong>Samsung Electronics DX Algorithm Bootcamp</strong>, 2023 summer
                                     <p>
-                                        Studied intermediate-advanced data structures and algorithms, such as dynamic programming and segment tree.
+                                        Studied intermediate-advanced data structures and algorithms, such as dynamic programming and segment trees.
                                     </p>
                                 </td>
                             </tr>
@@ -57,9 +57,9 @@
                             <tr>
                                 <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ldctiqac.png" width="100px"></td>
                                 <td>
-                                    <strong>AI Research Internship</strong>, Yonsei University (Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a>)
+                                    <strong>AI Research Internship</strong>, Yonsei University<br>Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a>
                                     <p>
-                                        todo
+                                        I developed a model that assesses the perceptual quality of low-dose CT images without references. The model was based on ResNet, and I designed the loss function to fine-tune the model.
                                     </p>
                                 </td>
                             </tr>
