minor contents update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                             <tr>
                                 <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ldctiqac.png" width="100px"></td>
                                 <td>
-                                    <strong>AI Research Internship</strong>, Yonsei University<br>Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a>
+                                    <strong>AI Research Internship</strong>, Yonsei University<br>
+                                    Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a><br>
+                                    dataset from <a href="https://ldctiqac2023.grand-challenge.org/ldctiqac2023/">ldctiqac 2023</a>
                                     <p>
                                         I developed a model that assesses the perceptual quality of low-dose CT images without references. The model was based on ResNet, and I designed the loss function to fine-tune the model.
                                     </p>
@@ -88,6 +90,17 @@
                     </td>
                   </tr>
                 </tbody></table>
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                    <tr>
+                      <td style="padding:0px">
+                        <br>
+                        <p style="text-align:right;font-size:small;">
+                          Last update: Oct 2024<br>
+                          Template from <a href="https://jonbarron.info/">Jon Barron's website</a>
+                        </p>
+                      </td>
+                    </tr>
+                  </tbody></table>
             </td>
         </tr>
         </tbody>
