changed email address

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         My favorite research topic is computer vision, while I'm also interested in LLM and other deep learning models. I'm moderately experienced in Python, especially in Pytorch.
                       </p>
                       <p style="text-align:center">
-                        <a href="mailto:raphael6931@gmail.com">Email</a> &nbsp;/&nbsp;
+                        <a href="mailto:raphael6931@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
                         <a href="data/AnDohyun-CV.pdf">CV</a>
                       </p>
                     </td>
