--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         I'm an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a>. I'm majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>.
                       </p>
                       <p>
-                        My favorite research topic is computer vision, while I'm also interested in LLM and other deep learning models. I'm moderately experienced in Python, especially in Pytorch.
+                        My favorite research topic is computer vision, while I'm also interested in LLM and some other deep learning models. I'm moderately experienced in Python, especially in Pytorch.
                       </p>
                       <p style="text-align:center">
                         <a href="mailto:raphael6931@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
@@ -59,7 +59,8 @@
                                 <td>
                                     <strong>AI Research Internship</strong>, Yonsei University<br>
                                     Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a><br>
-                                    dataset from <a href="https://ldctiqac2023.grand-challenge.org/ldctiqac2023/">ldctiqac 2023</a>
+                                    dataset from <a href="https://ldctiqac2023.grand-challenge.org/ldctiqac2023/">ldctiqac 2023</a><br>
+                                    Jul 2024 - Aug 2024
                                     <p>
                                         I developed a model that assesses the perceptual quality of low-dose CT images without references. The model was based on ResNet, and I designed the loss function to fine-tune the model.
                                     </p>
