--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <td>
                                     <strong>AI Research Internship</strong>, Yonsei University<br>
                                     Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a><br>
-                                    dataset from <a href="https://ldctiqac2023.grand-challenge.org/ldctiqac2023/">ldctiqac 2023</a><br>
+                                    dataset from <a href="https://ldctiqac2023.grand-challenge.org/ldctiqac2023/">LDCTIQAC 2023</a><br>
                                     Jul 2024 - Aug 2024
                                     <p>
                                         I developed a model that assesses the perceptual quality of low-dose CT images without references. The model was based on ResNet, and I designed the loss function to fine-tune the model.
