--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-        <title>An Dohyun</title>
+        <title>Dohyun An</title>
     
         <meta name="author" content="An Dohyun">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,7 @@
                   <tr style="padding:0px">
                     <td style="padding:2.5%;width:63%;vertical-align:middle">
                       <p class="name" style="text-align: center;">
-                        An Dohyun
+                        Dohyun An
                       </p>
                       <p>
                         I'm an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a>. I'm majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>.
