--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         I'm an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a>. I'm majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>.
                       </p>
                       <p>
-                        My favorite research topic is computer vision, while I'm also interested in LLM and some other deep learning models. I'm moderately experienced in Python, especially in Pytorch.
+                        My favorite topic is assistants and chatbots based on generative AI. I'm also interested in deep learning models for various fields, such as computer vision and natural language processing. I'm moderately experienced in Python, especially in Pytorch.
                       </p>
                       <p style="text-align:center">
                         <a href="mailto:raphael6931@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
@@ -44,17 +44,6 @@
                       <table width="100%" cellpadding="20">
                         <tbody>
                             <tr>
-                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/samsung.png" width="160px"></td>
-                                <td>
-                                    <strong>Samsung Electronics DX Algorithm Bootcamp</strong>, 2023 summer
-                                    <p>
-                                        Studied intermediate-advanced data structures and algorithms, such as dynamic programming and segment trees.
-                                    </p>
-                                </td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
                                 <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ldctiqac.png" width="160px"></td>
                                 <td>
                                     <strong>AI Research Internship</strong>, Yonsei University<br>
@@ -63,6 +52,17 @@
                                     Jul 2024 - Aug 2024
                                     <p>
                                         I developed a model that assesses the perceptual quality of low-dose CT images without references. The model was based on ResNet, and I designed the loss function to fine-tune the model.
+                                    </p>
+                                </td>
+                            </tr>
+                        </tbody>
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/samsung.png" width="160px"></td>
+                                <td>
+                                    <strong>Samsung Electronics DX Algorithm Bootcamp</strong>, 2023 summer
+                                    <p>
+                                        Studied intermediate-advanced data structures and algorithms, such as dynamic programming and segment trees.
                                     </p>
                                 </td>
                             </tr>
