--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
         <title>Dohyun An</title>
     
-        <meta name="author" content="An Dohyun">
+        <meta name="author" content="Dohyun An">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -22,7 +22,7 @@
                         Dohyun An
                       </p>
                       <p>
-                        I'm an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a>. I'm majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>.
+                        I'm an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a> majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>. Currently, I'm taking lectures about the basics of artificial intelligence and deep learning.
                       </p>
                       <p>
                         My favorite topic is assistants and chatbots based on generative AI. I'm also interested in deep learning models for various fields, such as computer vision and natural language processing. I'm moderately experienced in Python, especially in Pytorch.
@@ -97,7 +97,7 @@
                         <br>
                         <p style="text-align:right;font-size:small;">
                           Last update: Oct 2024<br>
-                          Template from <a href="https://jonbarron.info/">Jon Barron's website</a>
+                          Source code from <a href="https://jonbarron.info/">Jon Barron's website</a>
                         </p>
                       </td>
                     </tr>
