--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                     dataset from <a href="https://ldctiqac2023.grand-challenge.org/ldctiqac2023/">LDCTIQAC 2023</a><br>
                                     Jul 2024 - Aug 2024
                                     <p>
-                                        I developed a model that assesses the perceptual quality of low-dose CT images without references. The model was based on ResNet, and I designed the loss function to fine-tune the model.
+                                        Developed a model that assesses the perceptual quality of low-dose CT images without references. The model was based on ResNet, and the loss function was designed to fine-tune the model.
                                     </p>
                                 </td>
                             </tr>
