Github link & CV update

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                       </p>
                       <p style="text-align:center">
                         <a href="mailto:raphael6931@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
-                        <a href="data/AnDohyun-CV.pdf">CV</a>
+                        <a href="data/AnDohyun-CV.pdf">CV</a> &nbsp;/&nbsp;
+                        <a href="https://github.com/raphael6931">Github</a>
                       </p>
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
