--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         I'm an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a> majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>. Currently, I'm taking lectures about the basics of artificial intelligence and deep learning.
                       </p>
                       <p>
-                        My favorite topic is assistants and chatbots based on generative AI. I'm also interested in deep learning models for various fields, such as computer vision and natural language processing. I'm moderately experienced in Python, especially in Pytorch.
+                        <b>My favorite topic is assistants and chatbots based on generative AI.</b> I'm also interested in deep learning models for various fields, such as computer vision and natural language processing. I'm moderately experienced in Python, especially in Pytorch.
                       </p>
                       <p style="text-align:center">
                         <a href="mailto:raphael6931@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
