added YCC contents

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
                       <table width="100%" cellpadding="20">
                         <tbody>
                             <tr>
+                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ycc.png" width="160px"></td>
+                                <td>
+                                    <strong>Yonsei Computer Club (YCC)</strong><br>
+                                    Sep 2024 -
+                                    <p>
+                                        Computer club of Yonsei University that hosts various activities such as study meetings and software development projects.
+                                    </p>
+                                </td>
+                            </tr>
+                        </tbody>
+                        <tbody>
+                            <tr>
                                 <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ldctiqac.png" width="160px"></td>
                                 <td>
                                     <strong>AI Research Internship</strong>, Yonsei University<br>
