--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <td style="padding:0px">
                 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                   <tr style="padding:0px">
-                    <td style="padding:2.5%;width:63%;vertical-align:middle">
+                    <td style="padding:2.5%;width:63%;vertical-align:middle" class="round-box">
                       <p class="name" style="text-align: center;">
                         Dohyun An
                       </p>
@@ -41,14 +41,16 @@
                 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                     <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
-                      <h2>Experience</h2>
+                      <h2><u>Experience</u></h2>
                       <table width="100%" cellpadding="20">
                         <tbody>
                             <tr>
-                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ycc.png" width="160px"></td>
-                                <td>
-                                    <strong>Yonsei Computer Club (YCC)</strong><br>
-                                    Sep 2024 -
+                                <td style="padding:20px;width:20%;vertical-align:middle"><img src="images/ycc.png" width="160px"></td>
+                                <td class="round-box">
+                                    <p class="description">
+                                      <strong>Yonsei Computer Club (YCC)</strong><br>
+                                      Sep 2024 -
+                                    </p>
                                     <p>
                                         Computer club of Yonsei University that hosts various activities such as study meetings and software development projects.
                                     </p>
@@ -57,12 +59,14 @@
                         </tbody>
                         <tbody>
                             <tr>
-                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/ldctiqac.png" width="160px"></td>
-                                <td>
-                                    <strong>AI Research Internship</strong>, Yonsei University<br>
-                                    Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a><br>
-                                    dataset from <a href="https://ldctiqac2023.grand-challenge.org/ldctiqac2023/">LDCTIQAC 2023</a><br>
-                                    Jul 2024 - Aug 2024
+                                <td style="padding:20px;width:20%;vertical-align:middle"><img src="images/ldctiqac.png" width="160px"></td>
+                                <td class="round-box">
+                                    <p class="description">
+                                      <strong>AI Research Internship</strong>, Yonsei University<br>
+                                      Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a><br>
+                                      dataset from <a href="https://ldctiqac2023.grand-challenge.org/ldctiqac2023/">LDCTIQAC 2023</a><br>
+                                      Jul 2024 - Aug 2024
+                                    </p>
                                     <p>
                                         Developed a model that assesses the perceptual quality of low-dose CT images without references. The model was based on ResNet, and the loss function was designed to fine-tune the model.
                                     </p>
@@ -71,9 +75,11 @@
                         </tbody>
                         <tbody>
                             <tr>
-                                <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/samsung.png" width="160px"></td>
-                                <td>
-                                    <strong>Samsung Electronics DX Algorithm Bootcamp</strong>, 2023 summer
+                                <td style="padding:20px;width:20%;vertical-align:middle"><img src="images/samsung.png" width="160px"></td>
+                                <td class="round-box">
+                                    <p class="description">
+                                        <strong>Samsung Electronics DX Algorithm Bootcamp</strong>, 2023 summer
+                                    </p>
                                     <p>
                                         Studied intermediate-advanced data structures and algorithms, such as dynamic programming and segment trees.
                                     </p>
@@ -87,7 +93,7 @@
                 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                     <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
-                      <h2>Awards</h2>
+                      <h2><u>Awards</u></h2>
                         <br>
                         [Aug 2024] <b>The Highest Honors</b> (Yonsei University)
                         <ul>
@@ -110,7 +116,7 @@
                         <br>
                         <p style="text-align:right;font-size:small;">
                           Last update: Oct 2024<br>
-                          Source code from <a href="https://jonbarron.info/">Jon Barron's website</a>
+                          Source code credit to <a href="https://jonbarron.info/">Jon Barron's website</a>
                         </p>
                       </td>
                     </tr>
