--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </head>
     <body>
         <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr style="padding:0px">
+            <tr style="padding:5px">
               <td style="padding:0px">
                 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                   <tr style="padding:0px">
@@ -34,18 +34,18 @@
                       </p>
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
-                      <a href="images/profile.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/profile.jpg" class="hoverZoomLink"></a>
+                      <a href="images/profile.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt=" Dohyun An's profile photo" src="images/profile.jpg" class="hoverZoomLink"></a>
                     </td>
                   </tr>
                 </tbody></table>
                 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                     <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
-                      <h2><u>Experience</u></h2>
-                      <table width="100%" cellpadding="20">
+                      <h2 class="section-title"><u>Experience</u></h2>
+                      <table width="100%" cellpadding="20" style="border-spacing:5px">
                         <tbody>
-                            <tr>
-                                <td style="padding:20px;width:20%;vertical-align:middle"><img src="images/ycc.png" width="160px"></td>
+                            <tr=>
+                                <td style="padding:20px;width:20%;vertical-align:middle"><img src="images/ycc.png" width="160px" alt="YCC logo"></td>
                                 <td class="round-box">
                                     <p class="description">
                                       <strong>Yonsei Computer Club (YCC)</strong><br>
@@ -56,10 +56,8 @@
                                     </p>
                                 </td>
                             </tr>
-                        </tbody>
-                        <tbody>
                             <tr>
-                                <td style="padding:20px;width:20%;vertical-align:middle"><img src="images/ldctiqac.png" width="160px"></td>
+                                <td style="padding:20px;width:20%;vertical-align:middle"><img src="images/ldctiqac.png" width="160px" alt="CT image example"></td>
                                 <td class="round-box">
                                     <p class="description">
                                       <strong>AI Research Internship</strong>, Yonsei University<br>
@@ -72,10 +70,8 @@
                                     </p>
                                 </td>
                             </tr>
-                        </tbody>
-                        <tbody>
                             <tr>
-                                <td style="padding:20px;width:20%;vertical-align:middle"><img src="images/samsung.png" width="160px"></td>
+                                <td style="padding:20px;width:20%;vertical-align:middle"><img src="images/samsung.png" width="160px" alt="Bootcamp logo"></td>
                                 <td class="round-box">
                                     <p class="description">
                                         <strong>Samsung Electronics DX Algorithm Bootcamp</strong>, 2023 summer
@@ -93,7 +89,7 @@
                 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                     <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
-                      <h2><u>Awards</u></h2>
+                      <h2 class="section-title"><u>Awards</u></h2>
                         <br>
                         [Aug 2024] <b>The Highest Honors</b> (Yonsei University)
                         <ul>
