--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta charset="charset=UTF-8">
+
+        <meta name="description" content="Dohyun An's academic website">
+        <meta name="keywords" content="Dohyun An, Yonsei University, AI, Artificial Intelligence">
     
         <title>Dohyun An</title>
     
