--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <header class="header">
             <div class="profile-info">
-                <h1>Dohyun An</h1>
+                <h1 class="section-title">Dohyun An</h1>
                 <p>I am an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a>, majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>. Currently, I'm taking lectures on the basics of AI and deep learning.</p>
                 <p><b>My favorite topic is assistants and chatbots based on generative AI.</b> I'm also interested in deep learning models for various fields including computer vision and natural language processing. I'm moderately experienced in Python, especially in PyTorch.</p>
                 <div class="contact-links">
@@ -32,12 +32,12 @@
         </header>
 
         <section class="experience">
-            <h2>Experience</h2>
+            <h2 class="section-title">Experience</h2>
             <div class="experience-item">
                 <img src="images/ycc.png" alt="YCC Logo">
                 <div>
                     <h3>Yonsei Computer Club (YCC)</h3>
-                    <p>Sep 2024 - Present</p>
+                    <p class="reduced-margin">Sep 2024 - Present</p>
                     <p>Computer club of Yonsei University that hosts various activities such as study meetings and software development projects.</p>
                 </div>
             </div>
@@ -45,8 +45,9 @@
                 <img src="images/ldctiqac.png" alt="LDCTIQAC Logo">
                 <div>
                     <h3>AI Research Internship</h3>
-                    <p>Jul 2024 - Aug 2024</p>
-                    <p>Advisor: <a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Prof. Jongduk Baek</a></p>
+                    <p class="reduced-margin"><a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Medisys lab</a>, Yonsei University</p>
+                    <p class="reduced-margin">Jul 2024 - Aug 2024</p>
+                    <p class="reduced-margin">Advisor: Prof. Jongduk Baek</p>
                     <p>Developed a model that assesses the perceptual quality of low-dose CT images without references, based on ResNet. The loss function was designed to fine-tune the model.</p>
                 </div>
             </div>
@@ -54,18 +55,18 @@
                 <img src="images/samsung.png" alt="Samsung Logo">
                 <div>
                     <h3>Samsung Electronics DX Algorithm Bootcamp</h3>
-                    <p>Summer 2023</p>
+                    <p class="reduced-margin">Summer 2023</p>
                     <p>Studied intermediate-advanced data structures and algorithms, such as dynamic programming and segment trees.</p>
                 </div>
             </div>
         </section>
 
         <section class="awards">
-            <h2>Awards</h2>
+            <h2 class="section-title">Awards</h2>
             <ul>
-                <li><b>Highest Honors</b> - Aug 2024 (Yonsei University)<br>GPA: 4.25/4.3 (Top 1 in Dept. of AI)</li>
-                <li><b>Highest Honors</b> - Feb 2024 (Yonsei University)<br>GPA: 4.25/4.3 (Top 1 in College of Computing)</li>
-                <li><b>High Honors</b> - Aug 2023 (Yonsei University)<br>GPA: 4.25/4.3 (Top 4 in College of Computing)</li>
+                <li class="award-item"><b>Highest Honors</b> - Aug 2024 (Yonsei University)<br>GPA: 4.25/4.3 (Top 1 in Dept. of AI)</li>
+                <li class="award-item"><b>Highest Honors</b> - Feb 2024 (Yonsei University)<br>GPA: 4.25/4.3 (Top 1 in College of Computing)</li>
+                <li class="award-item"><b>High Honors</b> - Aug 2023 (Yonsei University)<br>GPA: 4.25/4.3 (Top 4 in College of Computing)</li>
             </ul>
         </section>
 
