increased image size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="profile-photo">
-                <img src="images/profile.jpg" alt="Profile photo of Dohyun An">
+                <img src="images/profile.jpg" alt="Dohyun An's profile image">
             </div>
         </header>
 
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="experience-item">
-                <img src="images/ldctiqac.png" alt="LDCTIQAC Logo">
+                <img src="images/ldctiqac.png" alt="CT image example">
                 <div>
                     <h3>AI Research Internship</h3>
                     <p class="reduced-margin"><a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Medisys lab</a>, Yonsei University</p>
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="experience-item">
-                <img src="images/samsung.png" alt="Samsung Logo">
+                <img src="images/samsung.png" alt="Bootcamp Logo">
                 <div>
                     <h3>Samsung Electronics DX Algorithm Bootcamp</h3>
                     <p class="reduced-margin">Summer 2023</p>
